refactoring methods to send notification using rabbitmq